# protei-test-task

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  main.cc
network/: CMakeLists.txt  internetaddress.cc  internetaddress.h  networkexception.cc  networkexception.h  socket.cc  socket.h  tcpserversocket.cc  tcpserversocket.h  tcpsocket.cc  tcpsocket.h  udpsocket.cc  udpsocket.h
server/: CMakeLists.txt  logger.cc  logger.h  main.cc  tcpserver.cc  tcpserver.h  udpserver.cc  udpserver.h
